Arlobot Docker image working
And reworked other images to better use cashing

--- a/r3-tutorials/Dockerfile
+++ b/r3-tutorials/Dockerfile
@@ -1,6 +1,11 @@
-FROM dtur3/r3-base:latest
+FROM ros:kinetic-ros-base-xenial
 
-RUN apt update && apt upgrade -y && apt install -y \
+RUN apt update && \
+	apt upgrade -y
+
+RUN apt install -y \
 	ros-kinetic-ros-tutorials \
-	ros-kinetic-common-tutorials \
-	&& rm -rf /var/lib/apt/lists/
+	ros-kinetic-common-tutorials
+
+RUN rm -rf /var/lib/apt/lists/
+
