--- a/r3-base/Dockerfile
+++ b/r3-base/Dockerfile
@@ -1,5 +1,11 @@
-FROM ros:kinetic-robot-xenial
+FROM ros:kinetic-ros-base-xenial
 
-RUN apt update && apt upgrade -y && apt install -y \
-	less nano \
-	&& rm -rf /var/lib/apt/lists/
+RUN apt update && \
+	apt upgrade -y
+
+RUN apt install -y \
+	less \
+	nano
+
+RUN rm -rf /var/lib/apt/lists/
+
