USB robust after reboot

--- a/r3-base/Dockerfile
+++ b/r3-base/Dockerfile
@@ -4,8 +4,9 @@ RUN apt update && \
 	apt upgrade -y
 
 RUN apt install -y \
+	htop \
 	less \
-	nano
+	nano \
+	screen
 
 RUN rm -rf /var/lib/apt/lists/
-
