--- a/r3-teleop/Dockerfile
+++ b/r3-teleop/Dockerfile
@@ -4,13 +4,7 @@ RUN apt update && \
 	apt upgrade -y
 
 RUN apt install -y \
-		ros-kinetic-turtlebot-teleop
+		ros-kinetic-turtlebot-teleop \
+		ros-kinetic-yocs-velocity-smoother
 
 RUN rm -rf /var/lib/apt/lists/
-
-RUN /bin/bash -c " \
-	echo 'source /opt/ros/kinetic/setup.bash' >> ~/.bashrc && \
-	source /opt/ros/kinetic/setup.bash && \
-	echo Done. \
-	"
-
