Use host for Docker network and UTS
To make it easier to user ROS networking between machines

--- a/r3-mqtt-bridge/r3-demo_params.yaml
+++ b/r3-mqtt-bridge/r3-demo_params.yaml
@@ -2,7 +2,7 @@ mqtt:
   client:
     protocol: 4 # MQTTv311
   connection:
-    host: mosquitto
+    host: localhost
     port: 1883
     keepalive: 60
 serializer: json:dumps
