--- a/r3-fiducials/Dockerfile
+++ b/r3-fiducials/Dockerfile
@@ -3,7 +3,9 @@ FROM ros:kinetic-ros-base-xenial
 RUN apt update && \
 	apt upgrade -y
 
-RUN apt install -y \
+RUN apt install -y --no-install-recommends \
+	inkscape \
+	poppler-utils \
 	ros-kinetic-fiducials
 
 RUN rm -rf /var/lib/apt/lists/
