--- a/r3-fiducials/Dockerfile
+++ b/r3-fiducials/Dockerfile
@@ -3,6 +3,9 @@ FROM ros:kinetic-ros-base-xenial
 RUN apt update && \
 	apt upgrade -y
 
+RUN apt install -y \
+	ros-kinetic-fiducial-msgs
+
 RUN apt install -y --no-install-recommends \
 	inkscape \
 	poppler-utils \
