--- a/r3-node-red/Dockerfile
+++ b/r3-node-red/Dockerfile
@@ -1,12 +1,36 @@
-FROM nodered/node-red-docker
-
-USER root
+FROM node:8
 
 RUN apt update && \
 	apt upgrade -y
 
 RUN rm -rf /var/lib/apt/lists/
 
+# Adapted from https://github.com/node-red/node-red-docker/blob/master/latest/Dockerfile
+
+# Home directory for Node-RED application source code.
+RUN mkdir -p /usr/src/node-red
+
+# User data directory, contains flows, config and nodes.
+RUN mkdir /data
+
+WORKDIR /usr/src/node-red
+
+# Add node-red user so we aren't running as root.
+RUN useradd --home-dir /usr/src/node-red --no-create-home node-red \
+    && chown -R node-red:node-red /data \
+    && chown -R node-red:node-red /usr/src/node-red
+
 USER node-red
 
-RUN npm install git+https://github.com/marvinferber/node-red-contrib-ros.git --save
+# package.json contains Node-RED NPM module and node dependencies
+COPY package.json /usr/src/node-red/
+RUN npm install
+
+# User configuration directory volume
+EXPOSE 1880
+
+# Environment variable holding file path for flows configuration
+ENV FLOWS=flows.json
+ENV NODE_PATH=/usr/src/node-red/node_modules:/data/node_modules
+
+CMD ["npm", "start", "--", "--userDir", "/data"]
