Update realsense dockerfile

--- a/r3-realsense/Dockerfile
+++ b/r3-realsense/Dockerfile
@@ -1,4 +1,4 @@
-FROM ros:kinetic-ros-base-xenial
+FROM ros:melodic-ros-base-bionic
 
 RUN apt update && \
 	apt upgrade -y
@@ -9,15 +9,23 @@ RUN apt install -y \
 	libusb-1.0-0-dev \
 	pkg-config \
 	libgtk-3-dev \
+	libglfw3-dev \
+        libgl1-mesa-dev \
+        libglu1-mesa-dev \
 	cmake \
 	freeglut3-dev \
-	ros-kinetic-cv-bridge \
-	ros-kinetic-image-transport \
-	ros-kinetic-tf \
-	ros-kinetic-ddynamic-reconfigure \
-	ros-kinetic-diagnostic-updater
+	ros-melodic-cv-bridge \
+	ros-melodic-image-transport \
+	ros-melodic-tf \
+	ros-melodic-ddynamic-reconfigure \
+	ros-melodic-diagnostic-updater
 
 RUN echo 'hid_sensor_custom' | tee -a /etc/modules
+
+RUN apt install -y \
+	libxinerama-dev \
+	libxcursor-dev \
+	libx11-dev
 
 RUN cd ~ && \
 	git clone https://github.com/IntelRealSense/librealsense.git && \
@@ -34,8 +42,8 @@ RUN mkdir -p ~/catkin_ws/src/ && \
 	git clone https://github.com/IntelRealSense/realsense-ros -b development
 
 RUN /bin/bash -c " \
-	echo 'source /opt/ros/kinetic/setup.bash' >> ~/.bashrc && \
-	source /opt/ros/kinetic/setup.bash && \
+	echo 'source /opt/ros/melodic/setup.bash' >> ~/.bashrc && \
+	source /opt/ros/melodic/setup.bash && \
 	cd ~/catkin_ws/ && \
 	catkin_make && \
 	sed -i '/exec/ i source ~/catkin_ws/devel/setup.bash' /ros_entrypoint.sh && \
