--- a/r3-realsense/Dockerfile
+++ b/r3-realsense/Dockerfile
@@ -1,4 +1,4 @@
-FROM ros:melodic-ros-base-bionic
+FROM ros:kinetic-ros-base-xenial
 
 RUN apt update && \
 	apt upgrade -y
@@ -14,18 +14,16 @@ RUN apt install -y \
         libglu1-mesa-dev \
 	cmake \
 	freeglut3-dev \
-	ros-melodic-cv-bridge \
-	ros-melodic-image-transport \
-	ros-melodic-tf \
-	ros-melodic-ddynamic-reconfigure \
-	ros-melodic-diagnostic-updater
+	libxinerama-dev \
+        libxcursor-dev \
+        libx11-dev \
+	ros-kinetic-cv-bridge \
+	ros-kinetic-image-transport \
+	ros-kinetic-tf \
+	ros-kinetic-ddynamic-reconfigure \
+	ros-kinetic-diagnostic-updater
 
 RUN echo 'hid_sensor_custom' | tee -a /etc/modules
-
-RUN apt install -y \
-	libxinerama-dev \
-	libxcursor-dev \
-	libx11-dev
 
 RUN cd ~ && \
 	git clone https://github.com/IntelRealSense/librealsense.git && \
@@ -42,8 +40,8 @@ RUN mkdir -p ~/catkin_ws/src/ && \
 	git clone https://github.com/IntelRealSense/realsense-ros -b development
 
 RUN /bin/bash -c " \
-	echo 'source /opt/ros/melodic/setup.bash' >> ~/.bashrc && \
-	source /opt/ros/melodic/setup.bash && \
+	echo 'source /opt/ros/kinetic/setup.bash' >> ~/.bashrc && \
+	source /opt/ros/kinetic/setup.bash && \
 	cd ~/catkin_ws/ && \
 	catkin_make && \
 	sed -i '/exec/ i source ~/catkin_ws/devel/setup.bash' /ros_entrypoint.sh && \
@@ -51,3 +49,12 @@ RUN /bin/bash -c " \
 	source ~/catkin_ws/devel/setup.bash && \
 	echo Done. \
 	"
+
+CMD echo "test 4"
+
+RUN apt install -y \
+	usbutils
+
+COPY entrypoint.sh /root/
+
+ENTRYPOINT ["/root/entrypoint.sh"]
